# radiant

./: .gitignore  CMakeLists.txt  README.md  main.cpp
samples/: 800@100.ppm  cornell_box.ppm
src/: main.h
src/bounding_box/: aabb.h  bvh.h
src/hittable/: aarect.h  box.h  constant_medium.h  hittable.h  hittable_list.h  moving_sphere.h  sphere.h
src/material/: material.h  perlin.h  texture.h
src/render/: ray.h  render.h  thread_pool.h
src/scene/: cornell_box.h  cornell_smoke.h  earth.h  final_scene.h  random_scene.h  scene.h  simple_light.h  two_perlin_spheres.h  two_spheres.h
src/util/: camera.h  color.h  r_stb_image.h  random.h  vec.h
